SG-2004-09-29-0: Bugfix:    the master spooled the user and projects in every scheduling run
                 Review:    JG
                 Changed:   qmaster

JG-2004-09-28-0: Enhancem.: Cleanup in qrsh_starter.
                            Cleanup and speedup in load report processing.
                            Add hashtables on cluster queue and queue instance
                            attributes.
                 Review:    SG

SG-2004-09-27-0: Tuning:    improved ticket order generation
                 Changed:   qmaster, scheduler
                 Review:    JG

JG-2004-09-23-0: Bugfix:    Fixed broken build.

CR-2004-09-23-0: Bugfix:    more precise error messages for communication 
                            errors
                 Review:    JG
                 Issue:     1275
                 Bugtraq:   5097732
                 Changed:   commlib, gdilib

CR-2004-09-22-0: Cleanup:   - removed unused messages
                            - qmaster will now respond faster to qconf -km
                            - added some comments to the source code
                 Review:    JG

EB-2004-09-21-0: Bugfix:    qmaster might fail if jobs are deleted which have 
                            multiple hold states applied 
                 Issue:     1280
                 Bugtraq:   
                 Review:    SG 

CR-2004-09-21-0: Testsuite: added a cleanup function for test
                            bugs/issuezilla/1270

JG-2004-09-20-0: Testuite:  Improved test performance/throughput, added a number
                            of charts to comparison of two clusters.
                 Review:    CR

SG-2004-09-20-0: Enhance.:  First part of extending the scheduler to use the
                            calendars. The qi-data structure has been extended
                            to include the next 2 state changes, and how long
                            the current and the next last. The calendar 