@@ -508,7 +508,7 @@ int sge_gdi_add_job(lListElem *jep, lList **alpp, lList **lpp, char *ruser,
 
    /* if enforce_user flag is "auto", add or update the user */
    if (conf.enforce_user && !strcasecmp(conf.enforce_user, "auto")) {
-      int status = sge_add_auto_user(ruser, rhost, request, alpp);
+      int status = sge_add_auto_user(ruser, alpp);
       if (status != STATUS_OK) {
          DEXIT;
          return status;
