@@ -79,7 +79,7 @@ enum {
 };
 
 LISTDEF(SU_Type)
-   SGE_STRING(SU_name, CULL_DEFAULT)
+   SGE_STRING(SU_name, CULL_HASH | CULL_UNIQUE)
    SGE_ULONG(SU_jobs, CULL_DEFAULT)
 LISTEND 
 
